Add request level filter

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Mon Apr 28 11:51:43 CEST 2014
-app.grails.version=2.3.6
+#Mon Dec 29 10:29:20 CET 2014
+app.grails.version=2.4.3
 app.name=acs-security
+app.servlet.version=2.5
